third_party/rust/thiserror/v1/crate/tests/ui/duplicate-transparent.stderr
error: duplicate #[error(transparent)] attribute
 --> tests/ui/duplicate-transparent.rs:5:1
  |
5 | #[error(transparent)]
  | ^^^^^^^^^^^^^^^^^^^^^
